public class Admin {

    // Attributes

    // ________________________________________________________

    public Admin(){

    } // Constructor

    // ________________________________________________________

    public void changePassword(){

    }

    // ________________________________________________________

    public void changeUsername(){

    }

    // ________________________________________________________

    public void clearByID(){

    }

    // ________________________________________________________

    public void banUser(){

    }

} // Admin end
