public class Bookmarked {
    int ID;
}
