import java.io.File;
import java.util.ArrayList;

public class Movies {

    // Attributes
    private ArrayList <Media> movies;
    private int ID;
    private String name;
    private File file;

    // ________________________________________________________

    public Movies(){

    }

    // ________________________________________________________

    public void addMovie(int ID, String name, File file){

    }

    // ________________________________________________________

    public void removeMovie(int ID, String name, File file){

    }

    // ________________________________________________________

    public int getID(){
        return this.ID;
    }

    // ________________________________________________________

    public String getName(){
        return this.name;
    }

    // ________________________________________________________

    public ArrayList <Media> getMovies(){

        // Placeholder
        return movies;
    }

}
