@startuml
'Andreas, Olivia, Daud & Jonas

'Visuals

'Setup
class Main
class Program
class User
class TextUI
class FileIO
abstract class MainMenu
class DevMenu
class Register
class Login
class Series
class Movies
class History
class Bookmarked
class Admin
class UserSettings
class Media

'Sequence
Main --> Program
Program --> TextUI
Program --> FileIO
Program --> Register
Program --> Login
Login --> User
Login --> Register
Register --> User
User --> MainMenu
Login --> DevMenu
Media <|-- Series
Media <|-- Movies
MainMenu <-- Bookmarked
MainMenu <-- History
MainMenu --> UserSettings
DevMenu <|-- Admin
MainMenu --> Media
User --> UserSettings

'Class
class Main{
    - static TextUI
    -Program p
    +startSession()
}

class Program{
    - TextUI
    - FileIO
    + Program(String name)
    + registerUser()
    + createUser()
    + endSession()
    + saveData()
    + devLogin()
    + login()
}

class FileIO{
    + saveData()
    + readData()
    + clearData()
    + createFile()
}

class TextUI{
    + AlotOfPrompts()
    + DisplayOptions()
    + Scanner scanner
}

class User{
    - String username
    - String password
    - boolean banned
    - String gender
    - int age
    - int ID
    # ArrayList<History> history
    # ArrayList<Bookmarked> bookmarked

    'Setters
    + user()
    + toCSV()
    + void addtoHistory(Media media)
    + void removeFromHistory(Media media)
    + void addToBookmaked(Media media)
    + void removeFromBookmarked(Media media)
    + void setName()
    + void setPassword()
    + void ban()
    + void setGender()
    + void setAge()
    + void setID()

    'Getters
    + String getName()
    + String getPassword()
    + boolean isBanned()
    + String getGender()
    + int getAge()
    + int getID()
}

class Register{
    - String username
    - String password
    - String gender
    - int age
    + Register(String username, String password, String gender, int age)
}

class Login{
    - String username
    - String password
    - int ID
    + void Login(String username, String password, int ID)
}

abstract class MainMenu{
    -Scanner scan
    # ArrayList<Categories>
    # ArrayList<Media> bookmarked
    # ArrayList<Media> history
    + startSession()
    + endSession()
    'Hvis vi laver GUI
    + menuLoop()
    'Hvis vi laver kun tekstbaseret
    + selectOption()

}

class DevMenu{
    - Admin admin
}

class Admin{
    + changePassword()
    + changeUsername()
    + clearByID()
    + banUser()
}

class Media {
    - int ID
    - String title
    - File file
    - int releaseYear
    - double rating
    - String category
    - float duration
    + Media(int ID, String title, File file, int releaseYear, double rating, String category)

    ' Getters
    + void getMedia(int ID)
    + void getCategory(int ID)
    + void getReleaseYear(int ID)
    + void getRating(int ID)
    + int getDuration()
}

class Movies{
    - ArrayList<Media> movies
    - int ID
    - String Name
    'Setters
    + void addMovie(int ID, String name, File file)
    + void removeMovie(int ID, String name, File file)

    ' Getters
    + int getID()
    + String getName()
    + ArrayList<Media> getMovies()
}

class Series {
    'Havde forestillet mig at lave name+ID som ID på serien
    - int ID
    - String Name
    - ArrayList<Media> files
    + Series(int ID, String name)

    'Setter
    + void addToSeries(Media media)
    + void removeFromSeries(Media media)

    'Getters
    + int getID()
    + String getName()
    + ArrayList<Media> getFiles()
    + Media getFile(int ID)
}


class History{
    - Media media
    - String name
    - int ID
    - float duration
    + void addToHistory(Media media, String name, int ID, float duration)

    ' Getters
    + Media getMedia()
    + String getName()
    + int getID()
    + float getduration()
}

class Bookmarked{
    - ArrayList<Media> savedMedia
    - String name
    - int ID
    + void addBookmark(Media media, String name, int ID)
    + void removeBookmark(Media media, String name, int ID)

    'Getters
    + Media getMedia()
    + String getName()
    + int getID()
}

class UserSettings{
    + void deleteAccount()
    + void pauseAccount(LocalDateTime period)
   'Kan ikke huske præcist om det hedder LocalDateTime
}



@enduml














